# xrandr-config

./: Main.hs  README.markdown  xrandr-config.cabal
