Name:                xrandr-config
Version:             0.0.0.1
Synopsis:            Quick and dirty tool to switch xrandr configs
Description:         Quick and dirty tool to switch xrandr configs
License:             BSD3
License-file:        LICENSE
Author:              Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:          Jasper Van der Jeugt <m@jaspervdj.be>
Copyright:           (c) 2013 Jasper Van der Jeugt
Category:            System
Build-type:          Simple
Cabal-version:       >= 1.8

Executable xrandr-config
  Main-is:     Main.hs
  Ghc-options: -Wall

  Build-depends:
    base    >= 4   && < 5,
    process >= 1.1 && < 1.2,
    parsec  >= 3.1 && < 3.2
